# fci

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  run_streamlit.sh  streamlit_app.py
agents/: discovery.py  pipeline.py  validation.py
api/: main.py
pages/: 10_Source_Discovery.py  16_Pipeline.py  1_Discovery.py  3_Tavily_Only_Discovery.py  6_Extraction_From_Cache.py  7_Source_Retrieval_Audit.py  8_Batch_Extraction_From_Mongo.py
prompts/: discovery.py
storage/: source_store.py
tests/: __init__.py  test_batch_extraction.py  test_discovery.py  test_discovery_node.py  test_extraction_cache.py  test_retrieval_audit.py  test_source_store.py
tools/: playwright_checker.py  search.py
ui/: __init__.py  discovery.py  extraction.py
